...
          );
        },
        child: const Icon(Icons.add),
        backgroundColor: Colors.green.shade800,
      ),
      appBar: AppBar(
        title: const Text('Ideas'),
        backgroundColor: Colors.green.shade900,
        actions: [
          IconButton(
            key: const ValueKey('LogoutKey'),
            onPressed: () {
              widget.authenticationService!.signOut();
              Navigator.of(context).pushReplacement(
                MaterialPageRoute<LoginScreen>(
                  builder: (_) => ChangeNotifierProvider.value(
                    value: Provider.of<IdeasModel>(context),
...
