...
                    padding: const EdgeInsets.all(16.0),
                    child: Column(
                      children: [
                        Container(
                          margin: const EdgeInsets.symmetric(vertical: 10),
                          child: TextFormField(
                            key: const ValueKey('newIdeaField'),
                            controller: _ideaNameController,
                            cursorColor: Colors.green.shade900,
                            style: TextStyle(color: Colors.grey.shade400),
                            decoration: InputDecoration(
                              labelText: 'Idea Title',
                              labelStyle: TextStyle(
...
                            ),
                          ),
                        ),
                        Container(
                          margin: const EdgeInsets.symmetric(vertical: 10),
                          child: TextFormField(
                            key: const ValueKey('inspirationField'),
                            controller: _ideaInspirationController,
                            cursorColor: Colors.green.shade900,
                            style: TextStyle(color: Colors.grey.shade400),
                            decoration: InputDecoration(
                              labelText: 'Inspiration',
                              labelStyle: TextStyle(
...
